<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_submit_amount">Enter Amount</string>
    <string name="amount">Amount</string>
    <string name="anupam">Anupam</string>
    <string name="anurag">Anurag</string>
    <string name="arpana">Arpana</string>
    <string name="expense">Expense description</string>
    <string name="slideText">Slide Screen Text</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="showSummary">Show Summary</string>

    <string-array name="spender_list">
        <item>Spent By</item>
        <item>Anupam</item>
        <item>Anurag</item>
        <item>Arpana</item>
    </string-array>

    <string name="title_activity_summary">Summary</string>
    <string name="g_plus_login">G+ Login</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >New Expense</item>
        <item >Summary</item>
        <item >Logout</item>
        <item >Help</item>
        <item >About</item>
    </string-array>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="desc_list_item_icon">Item Icon</string>

</resources>