<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SubmitAmountActivity" >

    <TextView
        android:id="@+id/amountAddedMessageId"
        style="@style/CodeFont" />

    <EditText
        android:id="@+id/expenseId"
        style="@style/CodeFont"
        android:layout_width="fill_parent"
        android:hint="@string/expense"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/spenderLayoutId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/amountId"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spendById"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:entries="@array/spender_list" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/anupamId"
        style="@style/CodeFont"
        android:layout_marginLeft="10sp"
        android:text="@string/anupam" />

    <CheckBox
        android:id="@+id/anuragId"
        style="@style/CodeFont"
        android:layout_marginLeft="10sp"
        android:text="@string/anurag" />

    <CheckBox
        android:id="@+id/arpanaId"
        style="@style/CodeFont"
        android:layout_marginLeft="10sp"
        android:text="@string/arpana" />

    <TextView
        style="@style/CodeFont"
        android:visibility="invisible" />

    <Button
        android:id="@+id/submitId"
        style="@style/CodeFont"
        android:layout_width="fill_parent"
        android:onClick="submitAmount"
        android:text="@string/submit" />

</LinearLayout>